# app/internal/api/docs/swagger.json
@@ -55,9 +55,9 @@
                 }
             }
         },
-        "/api/v1/auth/logout": {
-            "get": {
-                "description": "Logout user and invalidate access and refresh tokens",
+        "/api/v1/auth/login/with-google": {
+            "post": {
+                "description": "Register a new user using Google and return token with user data",
                 "consumes": [
                     "application/json"
                 ],
@@ -67,12 +67,29 @@
                 "tags": [
                     "Auth"
                 ],
-                "summary": "User logout",
+                "summary": "User registration with Google",
+                "parameters": [
+                    {
+                        "description": "Google auth request",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.GoogleAuthRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.LogoutResponse"
+                            "$ref": "#/definitions/model.LoginResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
                         }
                     },
                     "401": {
@@ -161,16 +178,27 @@
                 }
             }
         },
+        "model.GoogleAuthRequest": {
+            "type": "object",
+            "properties": {
+                "app_type": {
+                    "type": "string"
+                },
+                "id_token": {
+                    "type": "string"
+                }
+            }
+        },
         "model.LoginRequest": {
             "type": "object",
             "properties": {
-                "email": {
-                    "type": "string",
-                    "example": "user@example.com"
-                },
                 "password": {
                     "type": "string",
                     "example": "password123"
+                },
+                "phoneNumber": {
+                    "type": "string",
+                    "example": "1234567890"
                 }
             }
         },
@@ -190,14 +218,6 @@
                 }
             }
         },
-        "model.LogoutResponse": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
         "model.RefreshResponse": {
             "type": "object",
             "properties": {
@@ -212,13 +232,13 @@
         "model.RegisterRequest": {
             "type": "object",
             "properties": {
-                "email": {
-                    "type": "string"
-                },
                 "fullName": {
                     "type": "string"
                 },
                 "password": {
+                    "type": "string"
+                },
+                "phoneNumber": {
                     "type": "string"
                 }
             }
