# app/internal/handler/auth.go
@@ -1,10 +1,12 @@
 package handler
 
 import (
+	"context"
 	"net/http"
 
 	"github.com/labstack/echo/v4"
 	"gitlab.yurtal.tech/company/blitz/back/internal/model"
+	"google.golang.org/api/idtoken"
 )
 
 // Login handles user login
@@ -102,3 +104,50 @@ func (h *Handler) Refresh(c echo.Context) error {
 	return c.JSON(http.StatusOK, resp)
 }
 
+// RegisterWithGoogle handles user registration with Google
+// @Summary User registration with Google
+// @Description Register a new user using Google and return token with user data
+// @Tags Auth
+// @Accept json
+// @Produce json
+// @Param   input  body      model.GoogleAuthRequest  true  "Google auth request"
+// @Success 200 {object} model.LoginResponse
+// @Failure 400 {object} model.ErrorResponse
+// @Failure 401 {object} model.ErrorResponse
+// @Router /api/v1/auth/login/with-google [post]
+func (h *Handler) RegisterWithGoogle(c echo.Context) error {
+	req := new(model.GoogleAuthRequest)
+
+	if err := c.Bind(req); err != nil {
+		return c.JSON(http.StatusBadRequest, map[string]string{"error": "Invalid request body"})
+	}
+	var clientId string
+	switch req.AppType {
+	case "web":
+		clientId = h.cfg.Google.WebClientId
+	case "android":
+		clientId = h.cfg.Google.AndroidClientId
+	case "ios":
+		clientId = h.cfg.Google.IOSClientId
+	default:
+		return c.JSON(http.StatusBadRequest, map[string]string{"error": "Invalid app type"})
+	}
+
+	payload, err := idtoken.Validate(context.Background(), req.IDToken, clientId)
+	if err != nil {
+		return c.JSON(http.StatusUnauthorized, map[string]string{"error": "Invalid Google ID Token"})
+	}
+	email, _ := payload.Claims["email"].(string) 
+	name, _ := payload.Claims["name"].(string)
+
+	resp, err := h.service.Auth().LoginWithEmail(c.Request().Context(), model.LoginEmailRequest{
+		Email:    email,
+		IdToken: req.IDToken,
+		FullName: name,
+	}, &h.cfg.Jwt)
+	if err != nil {
+		return c.JSON(http.StatusUnauthorized, model.ErrorResponse{Message: err.Error()})
+	}
+
+	return c.JSON(http.StatusOK, resp)
+}
